log
Tue 04 Oct 2022 08:42:05 PM UTC: 
 tests:  0|4
total_score: 0/70
7b36079
Thu 13 Oct 2022 06:14:50 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:16: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   36 |   Heap *crear=(heap*)malloc(sizeof(Heap));
      |                ^~~~
      |                Heap
heap.c:36:16: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:21: error: expected expression before ‘)’ token
   36 |   Heap *crear=(heap*)malloc(sizeof(Heap));
      |                     ^
heap.c:38:8: error: ‘crear’ is a pointer; did you mean to use ‘->’?
   38 |   crear.heapArray=array;
      |        ^
      |        ->
heap.c:39:8: error: ‘crear’ is a pointer; did you mean to use ‘->’?
   39 |   crear.size=0;
      |        ^
      |        ->
heap.c:40:8: error: ‘crear’ is a pointer; did you mean to use ‘->’?
   40 |   crear.capac=3;
      |        ^
      |        ->
heap.c:36:9: error: variable ‘crear’ set but not used [-Werror=unused-but-set-variable]
   36 |   Heap *crear=(heap*)malloc(sizeof(Heap));
      |         ^~~~~
heap.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3ab3757
Thu 13 Oct 2022 06:15:04 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:8: error: ‘crear’ is a pointer; did you mean to use ‘->’?
   38 |   crear.heapArray=array;
      |        ^
      |        ->
heap.c:39:8: error: ‘crear’ is a pointer; did you mean to use ‘->’?
   39 |   crear.size=0;
      |        ^
      |        ->
heap.c:40:8: error: ‘crear’ is a pointer; did you mean to use ‘->’?
   40 |   crear.capac=3;
      |        ^
      |        ->
heap.c:36:9: error: variable ‘crear’ set but not used [-Werror=unused-but-set-variable]
   36 |   Heap *crear=(Heap*)malloc(sizeof(Heap));
      |         ^~~~~
heap.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bb58ec2
Thu 13 Oct 2022 06:15:17 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a78a90e
